<resources>
    <string name="app_name">Stock Order - DEV</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="loginButton">Login</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="notification_message">FCM Message</string>
    <string name="default_notification_channel_name">Channel name %s</string>
    <string name="background_image">Background image</string>
    <string name="devFlavorText">DEVELOPMENT</string>
    <string name="testFlavorText">TEST</string>
    <string name="appVersion">App version:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_orders">Orders</string>
    <string name="button_view_orders">View Orders</string>
    <string name="button_send_orders">Send Orders</string>
    <string name="button_settings">Settings</string>
    <string name="button_logout">Logout</string>
    <string name="please_select_an_option">Select an option</string>
    <string name="select_a_delivery_address">Select a delivery address</string>
    // Fragment titles
    <string name="delivery_address_title">Delivery address</string>
    <string name="go_back_to_options">Go back to option selections</string>
    <string name="order_date_text">Order date</string>
    <string name="showSettings">saved_pref_show_settings</string>
    <string name="welcome_text">Welcome</string>
    <string name="overflow_menu_text">Overflow menu</string>
    <string name="elis_logo_bottom">Bottom of page Elis logo</string>
    <string name="elis_page_background">Page background</string>
    <string name="pos_group_title">Point of service group</string>
    <string name="pos_title">Point of service</string>
    <string name="article_entry_title">Order entry</string>
    // Shared prefs
    <string name="session_shared_prefs">Session Shared Preferences</string>
    <string name="session_key">Session Key</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="data_loading_icon">data_loading_icon</string>
    <string name="please_select_a_point_of_service_group">Select a Point of service group</string>
    <string name="please_select_a_point_of_service">Select a point of service</string>
    <string name="delivery_address_text">Delivery address</string>
    <string name="point_of_service_text">Point of service</string>
    <string name="enter_counted_qty">Enter counted qty</string>


</resources>