<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.solstockorder.dev.LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.solstockorder.dev.viewModels.LoginViewModel" />

        <variable
            name="paramViewModel"
            type="com.solstockorder.dev.viewModels.ParamsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/new_applogin_design_background_centre_01"
            app:layout_constraintTop_toTopOf="@+id/username_input"
            tools:layout_editor_absoluteX="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/overflow_menu"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/overflow_menu_text"
            android:paddingTop="1dp"
            android:paddingEnd="1dp"
            app:icon="@drawable/ic_more_vert"
            app:iconGravity="start|end"
            app:iconSize="30dp"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/elis_blue"
            android:fontFamily="@font/sharpsans_medium"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/main_guideline"
            />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sharpsans_medium"
            android:letterSpacing="@dimen/welcome_letter_spacing"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="#9AFFFFFF"
            android:textColorHint="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/elis_black"
            app:boxBackgroundColor="#FFFFFF"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="#FFFFFF"
            app:boxStrokeWidth="1dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/elis_black"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/username_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sharpsans_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingTop="10dp"
            android:textColorHint="@color/elis_black"
            app:boxBackgroundColor="#FFFFFF"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/elis_black"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/welcome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sharpsans_medium"
                android:hint="@string/username"
                android:inputType="textCapCharacters"
                android:singleLine="false"
                android:textColorHint="@color/elis_black"
                app:layout_constraintBottom_toBottomOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sharpsans_medium"
            android:text="@string/loginButton"
            android:textAlignment="center"
            android:textColor="@color/elis_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:icon="@drawable/login_fill0_wght400_grad0_opsz48"
            app:iconGravity="textStart"
            app:iconSize="30dp"
            app:iconTint="@color/elis_black"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/password_input"
            app:strokeColor="#FFFFFF"
            tools:ignore="VisualLintButtonSize" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@{paramViewModel.appVersion}"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline" />

        <TextView
            android:id="@+id/flavor_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CD60A8"
            android:fontFamily="@font/sharpsans_medium"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/app_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="5dp" />

        <ProgressBar
            android:id="@+id/order_info_loading"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#77FFFFFF"
            android:clickable="true"
            android:indeterminateDrawable="@drawable/elis_loading_icon"
            android:paddingStart="150dp"
            android:paddingEnd="150dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/data_loading_icon"
            android:translationZ="90dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>